overview prices issues with text wrapping v3.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -46,7 +46,7 @@
 
 .table-with-dates-date-cell {
   padding-right: 10px;
-  white-space: inherit;
+  white-space: normal;
 }
 
 .table-with-prices-price-cell {
